# serverless-poc

./: .curl_examples  .gitignore  README.md  docker-compose.yaml  rust.yaml
function_manager/: Cargo.toml  README.md
function_manager/src/: filters.rs  handlers.rs  main.rs  models.rs
gateway_proxy/: Cargo.toml  README.md
gateway_proxy/src/: main.rs
