[package]
name = "function_manager"
version = "0.1.0"
authors = ["pa3ng"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde = "1.0"
pretty_env_logger = "0.4"
log = "0.4"
serde_derive = "1.0"
