[package]
name = "gateway_proxy"
version = "0.1.0"
authors = ["Raphael Santo Domingo <raphael.santodomingo@target.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde_json = { version = "1.0" }
